fix spacing in main sections

--- a/styles.css
+++ b/styles.css
@@ -186,8 +186,7 @@
 	/* Default Styling */
 
 	section {
-		padding: 3em 5em;
-		padding-top: 0em;
+		padding: 0 5em;
 	}
 
 	main h1 {
